# refine_apps

./: README.md  docker-compose.yaml  how_tos.md
.devcontainer/: devcontainer.json  post-start.sh
transactions-service/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  how_tos.md  pylintrc  pyproject.toml
transactions-service/alembic/: env.py
transactions-service/app/: main.py
transactions-service/app/api/: bills.py  vendors.py
transactions-service/app/core/: config.py  db.py
transactions-service/app/models/: __init__.py  bills.py  common.py  vendors.py
transactions-service/app/schemas/: bills.py  vendors.py
with-nextjs/: .env.local.example  package-lock.json
with-nextjs/src/app/: layout.tsx
with-nextjs/src/app/bills/: layout.tsx  page.tsx
with-nextjs/src/app/bills/create/: page.tsx
with-nextjs/src/app/bills/edit/[id]/: page.tsx
with-nextjs/src/app/bills/show/[id]/: page.tsx
with-nextjs/src/app/vendors/: layout.tsx  page.tsx
with-nextjs/src/app/vendors/create/: page.tsx
with-nextjs/src/app/vendors/edit/[id]/: page.tsx
with-nextjs/src/app/vendors/show/[id]/: page.tsx
with-nextjs/src/providers/data-provider/: index.ts
